# Blaze4D

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  renderdoc.cap  settings.gradle  settings.gradle.kts
.build/: deploy.sh  eliorona-sign.asc.gpg  usrgradle.properties.gpg
.cargo/: config.toml
Aftermath/: build.gradle.kts  settings.gradle.kts
Rosella/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
buildSrc/: .gitignore  build.gradle.kts
core/: .gitignore  Cargo.toml  build.gradle.kts
core/api/: build.gradle.kts
core/api/src/main/java/: module-info.java
core/api/src/main/java/graphics/kiln/blaze4d/core/: Blaze4DCore.java  Frame.java  GlobalImage.java  GlobalMesh.java
core/api/src/main/java/graphics/kiln/blaze4d/core/natives/: ImageDataNative.java  Lib.java  McUniformDataNative.java  MeshDataNative.java  Natives.java  PipelineConfigurationNative.java  Vec2u32Native.java  VertexFormatNative.java
core/api/src/main/java/graphics/kiln/blaze4d/core/types/: B4DFormat.java  B4DImageData.java  B4DIndexType.java  B4DPrimitiveTopology.java  B4DUniform.java  B4DUniformData.java  B4DVertexFormat.java  BlendOp.java  CompareOp.java  PipelineConfiguration.java
core/assets/: build.gradle.kts
core/assets/src/debug/: apply.frag  basic.frag
core/assets/src/debug/font/: msdf_font.vert
core/assets/src/debug/font/JetBrainsMono/tmp_built/: regular.json
core/assets/src/emulator/: mc_uniforms.glsl
core/assets/src/emulator/debug/: background.vert  color.vert  position.vert  textured.frag
core/assets/utils/: full_screen_quad.vert
core/examples/resources/: triangle.frag
core/natives/: .gitignore  Cargo.toml  build.gradle.kts  build.rs
core/natives/.cargo/: config.toml
core/natives/examples/: immedaite_cube.rs  immediate_cube.rs
core/natives/libvma/: CMakeLists.txt
core/natives/src/: b4d.rs  c_api.rs  c_log.rs  glfw_surface.rs  lib.rs  window.rs
core/natives/src/allocator/: mod.rs  vma.rs
core/natives/src/device/: device.rs  device_utils.rs  init.rs  mod.rs  surface.rs
core/natives/src/device/transfer/: allocator.rs  mod.rs  recorder.rs
core/natives/src/instance/: init.rs  instance.rs  mod.rs
core/natives/src/objects/: id.rs  object_set.rs  sync.rs
core/natives/src/renderer/emulator/: c_api.rs  debug_pipeline.rs  descriptors.rs  global_objects.rs  glsl.rs  immediate.rs  mc_shaders.rs  mod.rs  objects.rs  pipeline.rs  program.rs  shader.rs  share.rs  staging.rs  worker.rs
core/natives/src/renderer/emulator/glsl/: const_eval.rs  mod.rs
core/natives/src/test/: emulator.rs  headless_surface.rs  mod.rs
core/natives/src/util/: mod.rs
core/natives/src/vk/: mod.rs  test.rs
core/natives/src/vk/objects/: allocator.rs  buffer.rs  mod.rs  surface.rs  types.rs
core/src/: device.rs  instance.rs  lib.rs  rosella.rs  surface.rs  window.rs
core/src/init/: application_feature.rs  device.rs  instance.rs  mod.rs  rosella_features.rs  utils.rs
core/src/main/java/: module-info.java
core/src/main/java/graphics/kiln/blaze4d/core/: Blaze4DCore.java  Blaze4DNatives.java  Frame.java  GlobalImage.java  McUniform.java
core/src/main/java/graphics/kiln/blaze4d/core/natives/: McUniformDataNative.java  MeshDataNative.java  Natives.java  VertexFormatNative.java
core/src/main/java/graphics/kiln/blaze4d/core/structs/: Vec2u32.java
core/src/main/java/graphics/kiln/blaze4d/core/types/: B4DMeshData.java  B4DPrimitiveTopology.java  B4DUniformData.java  BlendFactor.java
core/src/objects/: format.rs  id.rs  mod.rs  object_set.rs  resource_object_set.rs  surface.rs  swapchain_object_set.rs
core/src/shader/: mod.rs
core/src/stream_executor/: commands.rs  mod.rs
core/src/util/: debug_messenger.rs  id.rs  mod.rs  slice_splitter.rs  test.rs
core/tests/: headless_init.rs
examples/: immedaite_cube.rs  main.rs  old_main.rs
mod/: .gitignore  (+2 more)
(+574 files in other folders)
