[package]
name = "b4d-core"
version = "0.1.0"
edition = "2021"

[features]
__internal_doc_test = []

[dependencies]
ash = { version="0.36.0", features=["debug", "linked"] }
ash-window = "0.9.0"
bumpalo = { version="3.9.1", features=["boxed"] }
concurrent-queue = "1.2.2"
gpu-allocator = "0.17.0"
lazy_static = "1.4.0"
log = "0.4.14"
nalgebra = "0.29.0"
paste = "1.0.6"
shaderc = "0.7.3"
vk-profiles-rs = { git="https://github.com/CodingRays/vk-profiles-rs.git", branch="ash-0.36" }
winit = "0.26.1"
xxhash-rust = { version="0.8.2", features=["xxh3", "const_xxh3"] }

[dev-dependencies]
env_logger = "0.9.0"
