[package]
name = "b4d-core"
version = "0.1.0"
edition = "2021"

[features]
__internal_doc_test = []

[dependencies]
ash = "0.37.0"
ash-window = "0.10.0"
concurrent-queue = "1.2.2"
gpu-allocator = "0.17.0"
lazy_static = "1.4.0"
log = "0.4.14"
shaderc = "0.7.3"
nalgebra = "0.29.0"
paste = "1.0.6"
winit = "0.26.1"
xxhash-rust = { version="0.8.2", features=["xxh3", "const_xxh3"] }

[dev-dependencies]
env_logger = "0.9.0"
